<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_round_corners"
    android:padding="@dimen/padding_small"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginEnd="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_course_date"/>

        <TextView
            android:id="@+id/nominal"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_course_nominal"/>
    </LinearLayout>

    <TextView
        android:id="@+id/value"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/value_color"
        android:layout_gravity="center|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_course_value"/>

</FrameLayout>