<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".createNotify.CreateNotifyFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:title="@string/create_notify_title"
            app:titleCentered="true"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextAppearance="@style/Toolbar.TitleText" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_notify_course_title"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/margin_small" />

            <TextView
                android:id="@+id/course_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_notify_value"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/margin_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/min_value_layout"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/min_value_edit"
                    android:layout_width="match_parent"
                    android:hint="@string/create_notify_hint_min"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/max_value_layout"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/max_value_edit"
                    android:layout_width="match_parent"
                    android:hint="@string/create_notify_hint_max"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                android:text="@string/create_notify_tooltip" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_notify_button"
                android:text="@string/create_notify_button_text"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="200dp"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/snack_bar_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_small"/>
</androidx.constraintlayout.widget.ConstraintLayout>